2004-05-29  John Paul Wallington  <jpw@gnu.org>

	* ssp.c (usage): Add missing linefeed. 

2004-05-27  Christopher Faylor  <cgf@alum.bu.edu>

	* kill.cc (listsig): Fix "kill -l" segv.  NSIG includes Signal 0, so we
	need to avoid calling strtosigno with NSIG - 1.

2004-03-21  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (dump_sysinfo): Remove "Win95/NT" from output.

2004-03-15  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (usage): Don't issue helpful message if -i is used.
	(from Igor Pechtchanski)

2004-03-13  Rob Siklos  <rob2@siklos.ca>

	* kill.cc (get_debug_priv): New function.
	(forcekill): Call get_debug_priv before trying to kill process.

2004-02-24  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (long_options): Add "mode" option.
	(options): Ditto.
	(usage): Report on new option.
	(report_mode): New function.
	(main): Implement -M option.

2004-02-20  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (build_dumper): Detect missing iconv library.

	* cygpath.cc (dowin): Report on filename conversion errors.
	(doit): Ditto.

	* strace.cc (main): Use symbolic constant for _STRACE_ALL when setting
	mask.

2004-02-14  Corinna Vinschen  <corinna@vinschen.de>

	* ssp.c (opts): Add leading '+' to force posixly correct behaviour.

2004-02-11  Corinna Vinschen  <corinna@vinschen.de>

	* strace.cc (opts): Add leading '+' to force posixly correct
	behaviour.
	(main): Revert POSIXLY_CORRECT manipulations.

2004-02-10  Christopher Faylor  <cgf@redhat.com>

	* strace.cc (main): Guard against previous setting of POSIXLY_CORRECT.

2004-02-10  Christopher Faylor  <cgf@redhat.com>

	* strace.cc: Update copyrights.
	* cygcheck.cc: Update copyrights.

2004-02-10  Christopher Faylor  <cgf@redhat.com>

	* strace.cc (main): Ensure POSIXLY_CORRECT argument ordering.
	* cygcheck.cc (main): Ditto.

2004-01-23  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc (pretty_id): Make more robust in absence of id.exe.
